--- a/app/src/main/res/drawable/shape_borderline_redfull.xml
+++ b/app/src/main/res/drawable/shape_borderline_redfull.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- 背景颜色 -->
-    <solid android:color="@color/firebrick" />
+    <solid android:color="#fd3350" />
 
     <!-- 设置边框 -->
     <padding
