--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -33,14 +33,16 @@
                 android:text="@string/setting_user_info" />
 
             <ImageView
-                android:layout_width="@dimen/setting_goicon_height"
-                android:layout_height="@dimen/setting_goicon_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/me_icon_go" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/common_to_side"
+            android:layout_marginRight="@dimen/common_to_side"
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
@@ -82,6 +84,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:visibility="gone"
+            android:layout_marginLeft="@dimen/common_to_side"
+            android:layout_marginRight="@dimen/common_to_side"
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
@@ -112,6 +117,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/common_to_side"
+            android:layout_marginRight="@dimen/common_to_side"
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
@@ -133,14 +140,17 @@
                 android:textSize="@dimen/common_textsize" />
 
             <ImageView
-                android:layout_width="@dimen/setting_goicon_height"
-                android:layout_height="@dimen/setting_goicon_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/me_icon_go" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:visibility="gone"
+            android:layout_marginLeft="@dimen/common_to_side"
+            android:layout_marginRight="@dimen/common_to_side"
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
@@ -161,14 +171,16 @@
                 android:textSize="@dimen/common_textsize" />
 
             <ImageView
-                android:layout_width="@dimen/setting_goicon_height"
-                android:layout_height="@dimen/setting_goicon_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/me_icon_go" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/common_to_side"
+            android:layout_marginRight="@dimen/common_to_side"
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
@@ -188,15 +200,18 @@
                 android:text="@string/setting_update_version"
                 android:textSize="@dimen/common_textsize" />
 
-            <ImageView
-                android:layout_width="@dimen/setting_goicon_height"
-                android:layout_height="@dimen/setting_goicon_height"
-                android:src="@drawable/me_icon_go" />
+            <TextView
+                android:id="@+id/setting_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="V1.0"/>
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:layout_marginLeft="@dimen/common_to_side"
+            android:layout_marginRight="@dimen/common_to_side"
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
