--- a/app/src/main/res/layout/item_activity_dongtai_detail.xml
+++ b/app/src/main/res/layout/item_activity_dongtai_detail.xml
@@ -153,7 +153,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/common_to_side"
-            android:background="@color/aliceblue" />
+            android:background="@color/common_line_color" />
 
         <RadioGroup
             android:id="@+id/rg_comment_group"
@@ -218,7 +218,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/common_to_side"
-            android:background="@color/aliceblue" />
+            android:background="@color/common_line_color" />
 
     </LinearLayout>
 </layout>
