--- a/app/src/main/res/layout/item_choose_gonghui.xml
+++ b/app/src/main/res/layout/item_choose_gonghui.xml
@@ -4,11 +4,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/dimgrey" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,11 +27,11 @@
 
         <CheckBox
             android:id="@+id/cb_check"
-            android:layout_width="@dimen/setting_switch_width"
-            android:layout_height="@dimen/setting_switch_height"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginRight="20dp"
             android:button="@null"
-            android:background="@drawable/select_switch"/>
+            android:background="@drawable/select_checkbox_common"/>
 
     </LinearLayout>
 
