--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -114,8 +114,10 @@
                         android:focusableInTouchMode="true"
                         android:background="@drawable/et_line_bg_style"
                         android:textCursorDrawable="@drawable/et_cursor_color_drawable"
-                        android:hint="@string/regist_mima"
-                        android:inputType="textPassword" />
+                        android:hint="@string/login_pwd"
+                        android:inputType="textPassword"
+                        android:layout_alignTop="@+id/cb_display_pwd"
+                        android:layout_centerHorizontal="true" />
 
                     <CheckBox
                         android:id="@+id/cb_display_pwd"
@@ -207,7 +209,6 @@
                     android:button="@null"
                     android:clickable="true"
                     android:drawablePadding="@dimen/regist_text_to_pic"
-                    android:drawableStart="@drawable/select_regist_dongman"
                     android:gravity="center"
                     android:paddingLeft="@dimen/regist_padding_to_side"
                     android:paddingRight="@dimen/regist_padding_to_side"
@@ -223,7 +224,6 @@
                     android:button="@null"
                     android:checked="true"
                     android:clickable="true"
-                    android:drawableLeft="@drawable/select_regist_manhua"
                     android:drawablePadding="@dimen/regist_text_to_pic"
                     android:gravity="center"
                     android:paddingLeft="@dimen/regist_padding_to_side"
@@ -245,7 +245,6 @@
                     android:button="@null"
                     android:clickable="true"
                     android:drawablePadding="@dimen/regist_text_to_pic"
-                    android:drawableStart="@drawable/select_regist_youxi"
                     android:gravity="center"
                     android:paddingLeft="@dimen/regist_padding_to_side"
                     android:paddingRight="@dimen/regist_padding_to_side"
@@ -263,7 +262,6 @@
                     android:background="@drawable/select_side_line"
                     android:button="@null"
                     android:clickable="true"
-                    android:drawableLeft="@drawable/select_regist_xiaoshuo"
                     android:drawablePadding="@dimen/regist_text_to_pic"
                     android:gravity="center"
                     android:paddingLeft="@dimen/regist_padding_to_side"
@@ -283,7 +281,6 @@
                     android:button="@null"
                     android:clickable="true"
                     android:drawablePadding="@dimen/regist_text_to_pic"
-                    android:drawableStart="@drawable/select_regist_cosplay"
                     android:gravity="center"
                     android:paddingLeft="@dimen/regist_padding_to_side"
                     android:paddingRight="@dimen/regist_padding_to_side"
@@ -301,7 +298,6 @@
                     android:background="@drawable/select_side_line"
                     android:button="@null"
                     android:clickable="true"
-                    android:drawableLeft="@drawable/select_regist_tongren"
                     android:drawablePadding="@dimen/regist_text_to_pic"
                     android:gravity="center"
                     android:paddingLeft="@dimen/regist_padding_to_side"
