--- a/app/src/main/res/layout/item_home_new.xml
+++ b/app/src/main/res/layout/item_home_new.xml
@@ -42,8 +42,7 @@
                     android:id="@+id/iv_user_pic"
                     android:layout_width="@dimen/icon_width"
                     android:layout_height="@dimen/icon_width"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/login_icon_qq" />
+                    android:layout_centerVertical="true"/>
 
                 <ImageView
                     android:id="@+id/iv_sex"
